# embedded_access_control_system

./: .gitignore  ARCHITECTURE.md  Cargo.toml
.cargo/: config.toml
docs/: mod-db.md
references/: motor.c  nfc.c
src/: auth.rs  config.rs  db.rs  error.rs  keyboard.rs  main.rs  motor.rs  nfc.rs  web.rs
