[package]
name = "access_control_system"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
rusqlite = { version = "0.39.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
toml = "0.8"
tower = "0.5"